--- a/RecipesAPI/appsettings.json
+++ b/RecipesAPI/appsettings.json
@@ -6,6 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "JWT": {
+    "ValidIssuer": "Paulius",
+    "ValidAudience": "TrustedClient",
+    "Secret": "123456789zxcvbnmasdfghjklqwertyu"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": { "DBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Rest" }
 }
